# cabal

cabal-install/tests/IntegrationTests/circular-testsuite/should_run/: testsuite-dependencies-are-independent.sh
cabal-install/tests/IntegrationTests/circular-testsuite/should_run/a/: a.cabal
cabal-install/tests/IntegrationTests/circular-testsuite/should_run/b/: B.hs  b.cabal
