name:                a
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Echo Nolan
category:            TestSuite
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     A
  build-depends:       base
  default-language:    Haskell2010

Test-Suite tests
  type: exitcode-stdio-1.0
  main-is: test.hs
  build-depends: b
