name:                b
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Echo Nolan
category:            TestSuite
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     B
  build-depends:       base, a
  default-language:    Haskell2010
